fixed scrollbar responsiveness

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,18 @@
   }
 }
 
+/* Scrollbar */
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f8fb;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.1);
+  background-color: #d3d5d7;
+}
+
 /* loader */
 .loader {
   width: fit-content;
